# news-collector.rs

./: .gitignore  Cargo.toml  README.md  dev.yaml  rust.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
templates/: about.html  footer.html  header.html  index.html  navbar.html
tests/: cli.rs  test_cli.rs
