[package]
name = "news-collector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command line program to collect RSS and Atom feeds and generate a merged page from them."
keywords = ["cli", "web", "static"]
#categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/news-collector.rs"
homepage = "https://news-collector.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
simple_logger = "4.2"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
feed-rs = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
liquid = "0.26"
liquid-core = "0.26"
