[package]
name = "news-collector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command line program to collect RSS and Atom feeds and generate a merged page from them."
keywords = ["cli", "web", "static"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/news-collector.rs"
homepage = "https://news-collector.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
simple_logger = "4.2"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
feed-rs = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
liquid = "0.26"
liquid-core = "0.26"
regex = "1.10"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
cargo  = { priority = -1, level = "deny" }

absolute_paths = "allow" # I actually like absolute_paths
single_call_fn = "allow" # I think it is ok to have functions that are only called once. It makes each function smaller and easier to understand.
missing_docs_in_private_items = "allow" # It's ok, we don't need documentation.
unwrap_used = "allow"
shadow_reuse = "allow"
single_match_else = "allow"
blanket_clippy_restriction_lints = "allow" # This is how I like to roll
question_mark_used = "allow" # I want to use ?

implicit_return = "allow" # I think I prefer having the explicit return statements so I might want to enable this
multiple_crate_versions = "allow" # I don't know if we can do anything about dependencies bringing in different versions of they own dependencies.

